# cuda-link

./: .cgw.conf  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruffignore  Benchmark.toe  CHANGELOG.md  CUDA_IPC_Comp.35.toe  CUDA_IPC_Comp.toe  CUDA_Link_Example.11.toe  CUDA_Link_Example.13.toe  CUDA_Link_Example.14.toe  CUDA_Link_Example.15.toe  CUDA_Link_Example.17.toe  CUDA_Link_Example.25.toe  CUDA_Link_Example.37.toe  CUDA_Link_Example.6.toe  CUDA_Link_Example.7.toe  CUDA_Link_Example.8.toe  CUDA_Link_Example.toe  LICENSE  README.md  build_wheel.cmd  cgw.conf.example  clean_pycache.cmd  pyproject.toml  stat_receiver_CUDA_IPC.txt  stat_receiver_sharedMem.txt  stat_sender_CUDA_IPC.txt  stat_sender_sharedMem.txt  stat_sender_touchOut.txt
.charlie/: config.yml
.claude/: Charlie_DOC.md  SLASH_COMMAND_TESTING_PROTOCOL.md  settings.json
.gemini/: gemini-invoke.md  gemini-review.md  gemini-scheduled-triage.md  gemini-triage.md
.githooks/: pre-commit  pre-push
References/: Advanced CUDA IPC Texture Sharing.txt  CUDA IPC Texture Transfer Windows.txt
TOXES/: CUDAIPCLink_v0.2.0.tox  CUDAIPCLink_v0.3.0.tox  CUDAIPCLink_v0.3.1.tox  CUDAIPCLink_v0.3.2.tox  CUDAIPCLink_v0.3.3.tox  CUDAIPCLink_v0.3.4.tox  CUDAIPCLink_v0.3.5.tox  CUDAIPCLink_v0.3.6.tox  CUDAIPCLink_v0.3.7.tox  CUDAIPCLink_v0.4.0.tox  CUDAIPCLink_v0.4.1.tox  CUDAIPCLink_v0.5.0.tox  CUDAIPCLink_v0.5.1.tox  CUDAIPCLink_v0.5.2.tox  CUDAIPCLink_v0.5.3.tox  CUDAIPCLink_v0.6.0.tox  CUDAIPCLink_v0.6.1.tox  CUDAIPCLink_v0.6.2.tox  CUDAIPCLink_v0.6.3.tox  CUDAIPCLink_v0.6.4.tox  CUDAIPCLink_v0.6.5.tox  CUDAIPCLink_v0.6.6.tox  CUDAIPCLink_v0.6.7.tox  CUDAIPCLink_v0.6.8.tox  CUDAIPCLink_v0.7.0.tox  CUDAIPCLink_v0.7.1.tox  CUDAIPCLink_v0.7.3.tox  CUDAIPCLink_v0.9.0.tox  CUDAIPCLink_v1.0.1.tox  CUDAIPCLink_v1.1.0.tox
benchmarks/: QUICK_BENCHMARK_GUIDE.md  TD_SHAREDMEM_TEST_SETUP.md  benchmark_comparison.py  benchmark_cuda_ipc.py  benchmark_sharedmem.py  run_benchmark.bat  td_sharedmem_reader.py  test_cuda_ipc_windows.py  test_td_sharedmem_reader.py
docs/: ARCHITECTURE.md  AUTOMATED_GIT_WORKFLOW.md  BASH_STYLE_GUIDE.md  BATCH_STYLE_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_EXAMPLES.md  OPT_1_implementation_PLAN.md  PERFORMANCE_OPTIMIZATIONS.md  PYTHON_DEBUGGING_PROTOCOL.md  PYTHON_STYLE_GUIDE.md  PYTHON_STYLE_GUIDE_QUICK.md  SHELL_STYLE_GUIDE.md  STYLE_AUDIT_REPORT.md  TOX_BUILD_GUIDE.md
scripts/: sync_td_wrapper.py
td_exporter/: ActivationBarrier.py  CUDAIPCExtension.py  CUDAIPCWrapper.py  HELP_DOC.md  NVMLObserver.py  benchmark_timestamp.py  callbacks_template.py  example_sender_launcher.py  example_sender_python.py  parexecute_callbacks.py  script_top_callbacks.py
tests/: __init__.py  conftest.py  test_activation_barrier.py  test_cuda_ipc_exporter.py  test_cuda_ipc_exporter_python.py  test_cuda_ipc_importer.py  test_cuda_ipc_wrapper.py  test_device_affinity.py  test_integration.py  test_nvml_observer.py  test_roundtrip.py  test_shm_protocol.py  test_wait_for_slot_busywait.py  test_wrapper_sync.py
(+78 files in other folders)
